# bybit-mcp-server

./: .env.example  .gitignore  PRD.md  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  publish-pypi.yml  test.yml
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: getting-started.md  intro.md
docs/docs/tools/: account.md  asset.md  market.md  position.md  trade.md
docs/src/css/: custom.css
src/bybit_mcp/: __init__.py  __main__.py  server.py
src/bybit_mcp_server/: __init__.py  __main__.py  client.py  config.py  decorators.py  server.py
src/bybit_mcp_server/tools/: __init__.py  account.py  asset.py  market.py  position.py  trade.py
tests/: conftest.py  test_account.py  test_asset.py  test_config.py  test_decorators.py  test_market.py  test_position.py  test_trade.py
