[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bybit-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for Bybit V5 API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "workspace" }]
keywords = ["mcp", "model-context-protocol", "bybit", "cryptocurrency", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pybit>=5.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
bybit-mcp = "bybit_mcp.server:main"

[project.urls]
Homepage = "https://github.com/workspace/bybit-mcp"
Documentation = "https://workspace.github.io/bybit-mcp"
Repository = "https://github.com/workspace/bybit-mcp"
Issues = "https://github.com/workspace/bybit-mcp/issues"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
